src/chrome/komodo/skin/plat/shared/window.less
/* ... */
tree { .list-styling.tree(tree); }
listbox { .list-styling.listbox(listbox); }
richlistbox { .list-styling.richlistbox(listbox); }

/* Pref Window */

.pref-window:not(#prefWindow):not(#prefProjectsWindow)
{
    background: transparent;
    -moz-appearance: none;
}

#prefWindow #panelFrame,
#prefProjectsWindow #panelFrame
{
    margin-top: 2px;
    -moz-appearance: @list-listbox-appearance !important;
    background: @list-listbox-background !important;
    border: @list-listbox-border;
    padding: 10px;
}

/* Unified Menu */

#unifiedMenuPrimaryPane, #unifiedMenuSecondaryPane
{
    min-width: 200px;
}

#unifiedMenuPrimaryPane
{
    border-right: @panel-border;
}

/* Groupboxes */

groupbox
{
    -moz-appearance: @groupbox-appearance;
    border: @groupbox-border;
}

caption
{
    font-weight: @caption-font-weight;
    background: @caption-background;
}

/* Tooltips */
tooltip
{
    -moz-appearance: @tooltip-appearance;
    background: @tooltip-background;
    border: @tooltip-border;
    color: @tooltip-color;

    description
    {
        color: @tooltip-color;
    }
}

/* Wizards */

wizard
{

    wizardpage,
    .wizard-header
    {
        background: @window-background;
        border-bottom: @wizard-header-border;
        color: @window-color;
    }

    .wizard-header
    {
        -moz-appearance: @wizard-header-appearance;
    }

    .wizard-buttons
    {
        -moz-appearance: @wizard-buttons-appearance;
        background: @bottom-background;
        border-top: @wizard-buttons-border;
    }

}

/* Alerts */

.alertBox
{
    background: @alertbox-background !important;
    border: @alertbox-border !important;
}

.alertImageBox
{
    background: @alertbox-image-background !important;
    border: @alertbox-image-border !important;
}

.alertTextBox, .alertCloseBox
{
    background: @alertbox-text-background !important;
}

/* Find bar */
ko-findbar
{
    background: @window-background;
    border-top: @main-border;
}

/* Misc */
sidebarheader
{
    background: @window-background;
}

// Make default button stand out a bit
.notification-button-default
{
    font-weight: bold;
}

